--- a/Doom_Procesador_plasma.ini
+++ b/Doom_Procesador_plasma.ini
@@ -4,14 +4,13 @@ hidden=False
 type=D2E
 defaultlanguage=Spanish
 defaultmusicon=True
-maxhero=2
 difficulty=0.4
 lengthmin=45
 lengthmax=90
 image=Procesador_plasma.png
-version=88-C6-6D-11-87-C2-ED-A0-13-35-CC-9E-BA-C7-6B-06-0B-16-DB-E4-4D-86-93-33-D2-07-DB-14-7E-AD-A7-54
+version=02-0B-77-54-E0-B4-BF-47-C6-9F-B4-01-2B-E9-5D-CF-19-E1-FF-98-CE-82-99-C7-63-CE-73-F5-73-D2-BE-A6
 name.Spanish=Doom - Procesador de plasma (v1.0)
 synopsys.Spanish=Misión de escolta para Doom 2016AVISO: Requiere el mod de Doom. Sin él, la aplicación se cerrará.
 description.Spanish=Doom - Procesador de plasma. \n\nMapa de la misión adaptado a partir del creado por <b>Cypher0117</b> para la BGG. \n----------------------------------------------------------------------------------\n  Se utiliza un mod especial de Doom 2016. Puedes encontrarlo en: \n Doom-Valkyrie.ddns.net o en https://boardgamegeek.com/filepage/253899/valkyrie-mod. \n---------------------------------------------------------------------------------\nEjecutar esta misión sin instalar el mod de Doom hará que la aplicación Valkyrie se bloquee y se cierre. Por favor, instala primero el mod y actívalo en tu colección.\n En la página donde están los archivos para descargar hay también un vídeo que explica cómo instalar el mod. \n---------------------------------------------------------------------------------\nMúsica:\nPaul Yudin: "Metal Beast"\nhttps://pixabay.com/users/paulyudin-27739282/\nReneSchulze1984: "Drum trailer intro"\nhttps://pixabay.com/users/reneschulze1984-25647681/
-authors.Spanish=Vidimus
+authors.Spanish=Vidimus\n---------------------------------------------------------------------\nGracias a Neuntöter por su gran trabajo con el <i>mod</i> de Doom 2016 para Valkyrie.
 authors_short.Spanish=Vidimus
